add routes for BookListComponent with default redirection to 'books'

--- a/BookManagerApp/src/app/app.component.html
+++ b/BookManagerApp/src/app/app.component.html
@@ -1,6 +1,7 @@
  <h1>{{title}}</h1>
 
  <div class="container">
-  <app-book-list></app-book-list>
- </div>
+  <!-- <app-book-list></app-book-list> -->
+  <router-outlet></router-outlet>
+</div>
 
