--- a/BookManagerApp/src/app/app.component.html
+++ b/BookManagerApp/src/app/app.component.html
@@ -1,7 +1,12 @@
- <h1>{{title}}</h1>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #90EE90;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Book Manager</a>
+  </div>
+</nav>
 
- <div class="container">
+ 
+
+<div class="container mt-4">
   <!-- <app-book-list></app-book-list> -->
   <router-outlet></router-outlet>
 </div>
-
