--- a/BookManagerApp/src/app/book-list/book-list.component.html
+++ b/BookManagerApp/src/app/book-list/book-list.component.html
@@ -1,29 +1,27 @@
 
-<h2>Books</h2>
 
-<table class="table table-striped">
+<div class="container">
+    <div class="d-flex justify-content-between align-items-center my-4">
+      <h2 class="mb-0">Books</h2>
+      <a routerLink="/AddBook" class="btn btn-success">+ New Book</a>
+    </div>
+  </div>
 
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Author</th>
-            <th>PublicationDate</th>
-        </tr>
+<div class="container">
+  <table class="table table-hover table-bordered table-striped shadow-lg">
+    <thead class="thead-dark">
+      <tr>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Publication Date</th>
+      </tr>
     </thead>
-
     <tbody>
-
-        <tr *ngFor="let book of books">
-
-            <td>{{book.title}}</td>
-            <td>{{book.author}}</td>
-            <td>{{book.publicationDate | date:'yyyy/MM/dd'}}</td>
-
-        </tr>
-
+      <tr *ngFor="let book of books">
+        <td>{{book.title}}</td>
+        <td>{{book.author}}</td>
+        <td>{{book.publicationDate | date:'yyyy/MM/dd'}}</td>
+      </tr>
     </tbody>
-
-
-</table>
-
-
+  </table>
+</div>
