Refactor app component structure and add background picture for better design

--- a/BookManagerApp/src/app/app.component.html
+++ b/BookManagerApp/src/app/app.component.html
@@ -1,12 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #90EE90;">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Book Manager</a>
+
+
+ <div style="background-image: url('cover.jpeg'); background-size: cover; background-position: center; height: 100vh;">
+
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #80a583;">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Book Manager</a>
+    </div>
+  </nav>
+
+  <div class="container mt-4" >
+    <!-- <app-book-list></app-book-list> -->
+    <router-outlet></router-outlet>
   </div>
-</nav>
+  
+ </div>
 
- 
-
-<div class="container mt-4">
-  <!-- <app-book-list></app-book-list> -->
-  <router-outlet></router-outlet>
-</div>
