--- a/BookManagerApp/src/app/book-list/book-list.component.html
+++ b/BookManagerApp/src/app/book-list/book-list.component.html
@@ -25,6 +25,7 @@
         <td class="text-center">
             <button (click)="updateBook(book.id)" class="btn btn-success mx-2">  <i class="fas fa-edit"></i></button>
             <button (click)="deleteBook(book.id)" class="btn btn-danger mx-2">  <i class="fas fa-trash-alt"></i></button>
+            <button (click)="viewBook(book.id)" class="btn btn-primary mx-2">  <i class="fas fa-eye"></i></button>
         </td>
       </tr>
     </tbody>
