--- a/BookManagerApp/src/app/update-book/update-book.component.html
+++ b/BookManagerApp/src/app/update-book/update-book.component.html
@@ -1,7 +1,10 @@
 <div class="container-sm mt-5" style="background-color: rgba(255, 255, 255, 0);">
     <div class="card shadow-lg p-4" style="background-color: rgba(255, 255, 255, 0.6);">
         
-        <h3 class="text-right mb-4">Create New Book</h3>
+        <h3 class="text-right mb-4" style="font-size: 3rem; font-weight: bold; color: #bbe5d2; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.8);">
+            Edit Book
+        </h3>
+        
         <div class="row">
             <div class="col-lg-7 col-sm-12">
                 <form (ngSubmit)="onSubmit()">
@@ -36,7 +39,7 @@
 
                     <!-- Submit Button -->
                     <div class="text-center">
-                        <button type="submit" class="btn btn-success mt-3 w-100">Create Book</button>
+                        <button type="submit" class="btn btn-success mt-3 w-100">Submit</button>
                     </div>
                 </form>
             </div>
